# pop_wrangler

./: .gitignore  .~lock.PA_05.15.19.xlsx#  .~lock.PA_Negatives_May-19-2019.xlsx#  .~lock.PA_Negatives_May-21-2019.xlsx#  .~lock.PA_Negatives_May-22-2019.xlsx#  .~lock.PA_analysis-Draft.xlsx#  .~lock.PA_analysis.xlsx#  PA_05.15.19.xlsx  PA_Negatives_May-19-2019.xlsx  PA_Negatives_May-21-2019.xlsx  PA_analysis-Draft.xlsx  PA_analysis.xlsx  README.md  README.rst  hour_collector.py  pa_parser.py  planning.org  punchcard.txt  pyproject.toml  tester.py
pop_wrangler/: triparse.py
pop_wrangler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pop_wrangler/analytics/: pa_parser.py  pa_scraper.py  pb_parser.py  pc_parser.py  triparse.py
pop_wrangler/analytics/excelerator/: file_cleaner.py  pa_formatter.py  pa_scraper.py  pc_parser.py
pop_wrangler/analytics/globdungeon/: .~lock.PA_07.10.18-01.xlsx#  PA_06.01.18.xlsx  PA_06.08.18.xlsx  PA_06.19.18-01.xlsx  PA_07.03.18-01.xlsx  PA_07.10.18-01.xls  PA_07.10.18-01.xlsx  PA_07.13.18-01.xlsx
pop_wrangler/analytics/pdf_parsing/: testparse.py  timecard.txt
pop_wrangler/flask/: app.py
pop_wrangler/flask_app/: .#app.py  __init__.py  parser.py
pop_wrangler/flask_app/files/sales_data/historic/: .~lock.Sales_Data_for_Hunter.xlsx#
pop_wrangler/utils/: file_handler.py
tasks/: README.md
tests/: test_pop_wrangler.py
