[tool.poetry]
name = "pop_wrangler"
version = "0.1.0"
description = ""
authors = ["MTempleman <huntertempleman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.24.2"
numpy = "^1.16"
xlrd = "^1.2"
natsort = "^6.0"
openpyxl = "^2.6"
XlsxWriter = "^1.1"
plotly = "^3.9"
flask = "^1.0"
flask-cors = "^3.0"
python-dotenv = "^0.10.3"
"pdfminer.six" = "^20181108.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
